--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   # Network
   dio: ^5.4.2+1 # HTTP client
   retrofit: ^4.1.0 # HTTP client generator
+
   
   # State management
   get_it: ^7.6.7 # Service locator
@@ -28,6 +29,8 @@ dependencies:
   device_info_plus: ^11.2.0 # Device information from OS
   flutter_screenutil: ^5.9.0 # Responsive UI
   shared_preferences: ^2.2.2 # Basic local data storage
+  geocoding: ^3.0.0 # Geocoding API
+  location: ^7.0.1 # Location API
 
 
 dev_dependencies:
@@ -47,15 +50,53 @@ flutter:
 
   assets:
     - assets/back.svg
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
+  
+  fonts:
+      - family: Montserrat
+        fonts:
+          - asset: assets/fonts/Montserrat-Thin.ttf
+            weight: 100
+          - asset: assets/fonts/Montserrat-ThinItalic.ttf
+            weight: 100
+            style: italic
+          - asset: assets/fonts/Montserrat-ExtraLight.ttf
+            weight: 200
+          - asset: assets/fonts/Montserrat-ExtraLightItalic.ttf
+            weight: 200
+            style: italic
+          - asset: assets/fonts/Montserrat-Light.ttf
+            weight: 300
+          - asset: assets/fonts/Montserrat-LightItalic.ttf
+            weight: 300
+            style: italic
+          - asset: assets/fonts/Montserrat-Regular.ttf
+            weight: 400
+          - asset: assets/fonts/Montserrat-Italic.ttf
+            weight: 400
+            style: italic
+          - asset: assets/fonts/Montserrat-Medium.ttf
+            weight: 500
+          - asset: assets/fonts/Montserrat-MediumItalic.ttf
+            weight: 500
+            style: italic
+          - asset: assets/fonts/Montserrat-SemiBold.ttf
+            weight: 600
+          - asset: assets/fonts/Montserrat-SemiBoldItalic.ttf
+            weight: 600
+            style: italic
+          - asset: assets/fonts/Montserrat-Bold.ttf
+            weight: 700
+          - asset: assets/fonts/Montserrat-BoldItalic.ttf
+            weight: 700
+            style: italic
+          - asset: assets/fonts/Montserrat-ExtraBold.ttf
+            weight: 800
+          - asset: assets/fonts/Montserrat-ExtraBoldItalic.ttf
+            weight: 800
+            style: italic
+          - asset: assets/fonts/Montserrat-Black.ttf
+            weight: 900
+          - asset: assets/fonts/Montserrat-BlackItalic.ttf
+            weight: 900
+            style: italic
+
