--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -45,5 +45,12 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Bu uygulama konum bilgilerinize erişmek istiyor.</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>Bu uygulama konum bilgilerinize erişmek istiyor.</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>Bu uygulama konum bilgilerinize erişmek istiyor.</string>
+
 </dict>
 </plist>
