--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,13 +24,14 @@ dependencies:
   
   # Utilities
   intl: ^0.19.0 # Date and number formatting
+  location: ^7.0.1 # Location API
+  geocoding: ^3.0.0 # Geocoding API
+  equatable: ^2.0.3 # Equatable objects are 
   flutter_svg: ^2.0.7 # SVG rendering
   cupertino_icons: ^1.0.8 # Cupertino icons
   device_info_plus: ^11.2.0 # Device information from OS
   flutter_screenutil: ^5.9.0 # Responsive UI
   shared_preferences: ^2.2.2 # Basic local data storage
-  geocoding: ^3.0.0 # Geocoding API
-  location: ^7.0.1 # Location API
 
 
 dev_dependencies:
