--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   
   # Utilities
   intl: ^0.19.0 # Date and number formatting
+  shimmer: ^3.0.0 # Shimmer effect for loading
   location: ^7.0.1 # Location API
   geocoding: ^3.0.0 # Geocoding API
   equatable: ^2.0.3 # Equatable objects are 
@@ -34,6 +35,7 @@ dependencies:
   connectivity_plus: ^2.3.0 # Connectivity settings from device
   flutter_screenutil: ^5.9.0 # Responsive UI
   shared_preferences: ^2.2.2 # Basic local data storage
+  tutorial_coach_mark: ^1.2.12 # Tutorial coach mark
 
 
 dev_dependencies:
